# CompPhys26

./: .gitignore  Homework1.ipynb  LabAssignment2_S26.ipynb  README.md
ClassNotebooks/: Class02_Notebook_S26_Complete.ipynb  Class03_Notebook_S26.ipynb  Class03_Notebook_S26_Complete.ipynb  Class04_Notebook_S26.ipynb  Class04_Notebook_S26_Complete.ipynb  Class05_Notebook_S26.ipynb  Class05_Notebook_S26_Complete.ipynb  Class06pt1_Notebook_Complete_S26.ipynb  Class06pt1_Notebook_S26.ipynb  Class06pt2_Notebook_S26.ipynb  Class07_Notebook_Complete_S26.ipynb  Class07_Notebook_S26.ipynb  Class08_Notebook_S26.ipynb  Class08_Notebook_S26_Complete.ipynb  Class09_Notebook_S26.ipynb  Class09_Notebook_S26_Complete.ipynb  Class10_Notebook_S26.ipynb  Class10_Notebook_S26_Complete.ipynb  Class11_Notebook_S26.ipynb  Class11_Notebook_S26_Complete.ipynb  Class12_Notebook_S26.ipynb  Class12_Notebook_S26_Complete.ipynb  Class13_Notebook_S26.ipynb  Class13_Notebook_S26_Complete.ipynb  Class14_Notebook_S26.ipynb  Class14_Notebook_S26_Complete.ipynb  Homework03_BenjaminMaxwell.ipynb  Macleod.pdf:Zone.Identifier  SaveGraphs.ipynb  circuit.txt  numbers.txt  numbers2D.txt  stm.txt:Zone.Identifier  sunspots.txt:Zone.Identifier
General/: Homework01_KristenTownsend.ipynb  Homework02_KristenTownsend.ipynb  Homework03_KristenTownsend.ipynb  Homework04_KristenTownsend.ipynb  Homework05_KristenTownsend.ipynb  velocities.txt:Zone.Identifier
Homework/: Homework#_Therrin.ipynb  Homework2_JunoRyan.ipynb  Homework2_Therrin.ipynb  Homework3_Therrin (2).ipynb  Untitled.ipynb  (+1 more)
compphys26/: pyproject.toml
(+80 files in other folders)
