[project]
name = "compphys26"
version = "0.1.0"
description = ""
requires-python = ">=3.13"
dependencies = [
  "numpy",
  "matplotlib",
  "pip>=25.3",
  "pytest>=9.0.2",
  "nbmake>=1.5.5",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv.workspace]
members = [
    "package",
]
